--- a/.env.example
+++ b/.env.example
@@ -17,7 +17,8 @@
 ### PROJECT SETTINGS
 
 PROJECT_NAME=nlc_neo4j
-# PROJECT_BASE_URL=nlc-drupal.docker.localhost
+PROJECT_BASE_URL=nlc-neo4j.docker.localhost
+PUBLIC_PORT=80
 
 NLC_ENVIRONMENT=local
 
@@ -38,3 +39,14 @@ NEO4J_TAG=3.5.9
 # NEO4J_TAG=3.5.8
 # NEO4J_TAG=3.5.7
 # NEO4J_TAG=3.5.6
+
+### --- NGINX ----
+### [DRUPAL_VERSION]-[NGINX_VERSION]-[STABILITY_TAG]
+
+NGINX_TAG=1.16
+#NGINX_TAG=1.17
+#NGINX_TAG=1.15
+#NGINX_TAG=1.14
+#NGINX_TAG=1.1.3
+
+NGINX_SERVER_ROOT=/var/www/html/web
