--- a/api/package.json
+++ b/api/package.json
@@ -19,6 +19,7 @@
     "apollo-client": "^2.6.4",
     "apollo-link-http": "^1.5.15",
     "apollo-server": "^2.8.2",
+    "braces": ">=2.3.1",
     "dotenv": "^7.0.0",
     "graphql-tag": "^2.10.1",
     "neo4j-driver": "^1.7.5",
